fix: keep scrollbars when capthca is opened

--- a/css/common.css
+++ b/css/common.css
@@ -7,7 +7,7 @@
   text-align: center;
   color: gray;
   background-color: rgba(240, 235,193, 0.9);
-  position: fixed;
+  position: absolute;
   top: 0px;
   border-radius: 10px;
 }
